--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "mypreview/woo-store-vacation",
   "description": "Put your WooCommerce store in vacation or pause mode with custom notice.",
-  "homepage": "https://wordpress.org/plugins/woo-store-vacation/",
+  "homepage": "https://wordpress.org/plugins/woo-store-vacation",
   "type": "wordpress-plugin",
   "license": "GPL-3.0+",
   "require": {
@@ -15,6 +15,7 @@
     "woocommerce/woocommerce-git-hooks": "*",
     "woocommerce/woocommerce-sniffs": "*",
     "wimg/php-compatibility": "^8.0",
+    "wp-cli/i18n-command": "^2.2",
     "dealerdirect/phpcodesniffer-composer-installer": "^0.4.3"
   },
   "scripts": {
@@ -38,6 +39,9 @@
     ],
     "phpcbf": [
       "phpcbf -p"
+    ],
+    "make-pot": [
+      "wp i18n make-pot . languages/woo-store-vacation.pot"
     ]
   },
   "extra": {
