--- a/composer.json
+++ b/composer.json
@@ -1,36 +1,36 @@
 {
-  "name": "mypreview/woo-store-vacation",
-  "type": "wordpress-plugin",
-  "description": "Pause your store temporarily with scheduling your vacation dates and displaying a user-friendly notice at the top of your shop page.",
-  "keywords": [
-    "WordPress",
-    "Plugin"
-  ],
-  "homepage": "https://wordpress.org/plugins/woo-store-vacation",
-  "license": "GPL-3.0",
-  "authors": [
-    {
-      "name": "Mahdi Yazdani",
-      "homepage": "https://mahdiyazdani.com"
-    }
-  ],
-  "require": {
-    "php": ">=7.2"
-  },
-  "require-dev": {
-    "dealerdirect/phpcodesniffer-composer-installer": "^0.6.2",
-    "wp-coding-standards/wpcs": "^2.3.0",
-    "phpunit/phpunit": "^7",
-    "phpcompatibility/phpcompatibility-wp": "^2.1",
-    "php-parallel-lint/php-parallel-lint": "^1.2.0",
-    "woocommerce/woocommerce-git-hooks": "*",
-    "woocommerce/woocommerce-sniffs": "*",
-    "wp-cli/i18n-command": "^2.2"
-  },
-  "scripts": {
-    "lint:wpcs": "@php ./vendor/squizlabs/php_codesniffer/bin/phpcs",
-    "lint:wpcs-fix": "@php ./vendor/squizlabs/php_codesniffer/bin/phpcbf",
-    "lint:php": "@php ./vendor/bin/parallel-lint --exclude .git --exclude vendor --exclude node_modules .",
-    "make-pot": "wp i18n make-pot . languages/woo-store-vacation.pot"
-  }
+	"name": "mypreview/woo-store-vacation",
+	"type": "wordpress-plugin",
+	"description": "Pause your store temporarily with scheduling your vacation dates and displaying a user-friendly notice at the top of your shop page.",
+	"keywords": [
+		"WordPress",
+		"Plugin"
+	],
+	"homepage": "https://wordpress.org/plugins/woo-store-vacation",
+	"license": "GPL-3.0",
+	"authors": [
+		{
+			"name": "Mahdi Yazdani",
+			"homepage": "https://mahdiyazdani.com"
+		}
+	],
+	"require": {
+		"php": ">=7.2"
+	},
+	"require-dev": {
+		"dealerdirect/phpcodesniffer-composer-installer": "^0.6.2",
+		"wp-coding-standards/wpcs": "^2.3.0",
+		"phpunit/phpunit": "^7",
+		"phpcompatibility/phpcompatibility-wp": "^2.1",
+		"php-parallel-lint/php-parallel-lint": "^1.2.0",
+		"woocommerce/woocommerce-git-hooks": "*",
+		"woocommerce/woocommerce-sniffs": "*",
+		"wp-cli/i18n-command": "^2.2"
+	},
+	"scripts": {
+		"lint:wpcs": "@php ./vendor/squizlabs/php_codesniffer/bin/phpcs",
+		"lint:wpcbf": "@php ./vendor/squizlabs/php_codesniffer/bin/phpcbf",
+		"lint:php": "@php ./vendor/bin/parallel-lint --exclude .git --exclude vendor --exclude node_modules .",
+		"make-pot": "wp i18n make-pot . languages/woo-store-vacation.pot"
+	}
 }
