--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
 	"name": "woo-store-vacation",
 	"title": "Woo Store Vacation",
 	"description": "Pause your store temporarily with scheduling your vacation dates and displaying a user-friendly notice at the top of your shop page.",
-	"version": "1.3.9",
+	"version": "1.4.1",
 	"author": "MyPreview",
 	"author_shop": "https://www.mypreview.one",
 	"author_uri": "https://mahdiyazdani.com",
 	"requires": "5.0",
 	"tested_up_to": "5.5",
 	"license": "GPL-3.0",
-	"copyright": "© 2015 - 2020 MyPreview. All Rights Reserved.",
+	"copyright": "© 2015 - 2021 MyPreview. All Rights Reserved.",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/mypreview/woo-store-vacation.git"
@@ -27,17 +27,17 @@
 		"reformat-files": "prettier --ignore-path .eslintignore --write \"**/*.{js,jsx,json,ts,tsx}\""
 	},
 	"devDependencies": {
-		"@babel/core": "7.11.1",
-		"@wordpress/babel-preset-default": "4.17.0",
-		"@wordpress/eslint-plugin": "^7.1.0",
-		"@wordpress/browserslist-config": "^2.7.0",
+		"@babel/core": "7.13.10",
+		"@wordpress/babel-preset-default": "5.0.1",
+		"@wordpress/browserslist-config": "^3.0.1",
+		"@wordpress/eslint-plugin": "^8.0.2",
 		"@wordpress/i18n": "3.14.0",
 		"babel-core": "7.0.0-bridge.0",
 		"babel-eslint": "10.1.0",
-		"cross-env": "7.0.2",
-		"eslint": "7.6.0",
-		"eslint-config-prettier": "6.11.0",
-		"prettier": "npm:wp-prettier@2.0.5"
+		"cross-env": "7.0.3",
+		"eslint": "7.21.0",
+		"eslint-config-prettier": "8.1.0",
+		"prettier": "npm:wp-prettier@2.2.1-beta-1"
 	},
 	"browserslist": [
 		"extends @wordpress/browserslist-config"
@@ -48,8 +48,5 @@
 	},
 	"eslintConfig": {
 		"extends": "wordpress"
-	},
-	"dependencies": {
-		"slugify": "^1.4.5"
 	}
 }
