--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
 		"makepot": "composer make-pot"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.9.0",
-		"@wordpress/eslint-plugin": "^9.0.6",
-		"@wordpress/prettier-config": "^1.1.0",
-		"lint-staged": "^11.0.1",
+		"@babel/core": "7.17.2",
+		"@wordpress/eslint-plugin": "9.3.0",
+		"@wordpress/prettier-config": "1.1.1",
+		"lint-staged": "11.2.6",
 		"prettier": "npm:wp-prettier@^2.2.1-beta-1",
 		"wp-prettier": "^2.2.1-beta-1"
 	}
