--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@mypreview/woo-store-vacation",
-	"version": "1.4.2",
+	"version": "1.4.5",
 	"private": true,
 	"description": "Pause your store temporarily with scheduling your vacation dates and displaying a user-friendly notice at the top of your shop page.",
 	"homepage": "https://github.com/mypreview/woo-store-vacation#readme",
@@ -14,20 +14,20 @@
 	"license": "GPL-3.0-or-later",
 	"author": "MyPreview",
 	"scripts": {
+		"format": "prettier --ignore-path .eslintignore --write \"**/*.{js,jsx,json,ts,tsx}\"",
 		"lint:js": "eslint assets --ext=js,jsx,json,ts,tsx",
 		"lint:js-fix": "eslint assets --ext=js,jsx,json,ts,tsx --fix",
-		"format": "prettier --ignore-path .eslintignore --write \"**/*.{js,jsx,json,ts,tsx}\"",
 		"lint:php": "composer lint:php",
 		"lint:wpcs": "composer lint:wpcs",
 		"lint:wpcs-fix": "composer lint:wpcbf",
 		"makepot": "composer make-pot"
 	},
 	"devDependencies": {
-		"@babel/core": "7.17.2",
-		"@wordpress/eslint-plugin": "9.3.0",
-		"@wordpress/prettier-config": "1.1.1",
-		"lint-staged": "11.2.6",
-		"prettier": "npm:wp-prettier@^2.2.1-beta-1",
-		"wp-prettier": "^2.2.1-beta-1"
+		"@babel/core": "7.18.2",
+		"@wordpress/eslint-plugin": "12.4.0",
+		"@wordpress/prettier-config": "1.3.0",
+		"lint-staged": "13.0.1",
+		"prettier": "npm:wp-prettier@^2.6.2",
+		"wp-prettier": "2.6.2"
 	}
 }
