--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,9 @@
-# Editors
-project.xml
-project.properties
-/nbproject/private/
-.buildpath
-.project
-.settings*
-.idea
-*.sublime-project
-*.sublime-workspace
-.sublimelinterrc
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # Sass
 .sass-cache/
@@ -19,47 +14,36 @@ project.properties
 # Windows junk
 Thumbs.db
 
-# ApiGen
-/wc-apidocs/
+# Coverage directory used by tools like istanbul
+coverage
 
-# Behat/CLI Tests
-tests/cli/installer
-tests/cli/composer.phar
-tests/cli/composer.lock
-tests/cli/composer.json
-tests/cli/vendor
+# Compiled binary addons (https://nodejs.org/api/addons.html)
+build/Release
+
+# Dependency directories
+node_modules/
+vendor/
+build/
 
 # Unit tests
 /tmp
 /tests/bin/tmp
 /tests/e2e-tests/config/local-*.json
 
-# Logs
-/logs
+# Optional npm cache directory
+.npm
 
-# Composer
-/vendor/
+# Optional eslint cache
+.eslintcache
 
-# ignore everything in the root except the "wp-content" directory.
-!wp-content/
+# Output of 'npm pack'
+*.tgz
 
-# ignore everything in the "wp-content" directory, except:
-# "mu-plugins", "plugins", "themes" directory
-wp-content/*
-!wp-content/mu-plugins/
-!wp-content/plugins/
-!wp-content/themes/
+# dotenv environment variables file
+.env
 
-# ignore these plugins
-wp-content/plugins/hello.php
+# IDE Configuration Files
+.idea
 
-# ignore specific themes
-wp-content/themes/twenty*/
-
-# ignore node dependency directories
-node_modules/
-
-# ignore log files and databases
-*.log
-*.sql
-*.sqlite
+# Archive
+*.zip
