--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -3,95 +3,96 @@
     <!-- See https://github.com/squizlabs/PHP_CodeSniffer/wiki/Annotated-ruleset.xml -->
     <!-- See https://github.com/WordPress/WordPress-Coding-Standards -->
     <!-- See https://github.com/PHPCompatibility/PHPCompatibilityWP -->
-
     <!-- Set a description for this ruleset. -->
     <description>A custom set of code standard rules to check for WordPress plugins.</description>
-
     <!--
     #############################################################################
     COMMAND LINE ARGUMENTS
     https://github.com/squizlabs/PHP_CodeSniffer/wiki/Annotated-ruleset.xml
     #############################################################################
     -->
-
     <!-- Pass some flags to PHPCS:
          p flag: Show progress of the run.
          s flag: Show sniff codes in all reports.
+         v flag: Print verbose output.
+         n flag: Do not print warnings.
     -->
-    <arg value="ps"/>
-
+    <arg value="psv" />
     <!-- Strip the filepaths down to the relevant bit. -->
-    <arg name="basepath" value="./"/>
-
+    <arg name="basepath" value="./" />
     <!-- Check up to 8 files simultanously. -->
-    <arg name="parallel" value="8"/>
-
-    <!-- Only check the PHP files. JS, and CSS files are checked separately with @wordpress/scripts package. -->
-    <arg name="extensions" value="php"/>
-
+    <arg name="parallel" value="8" />
+    <!-- Only check the PHP files. JS, and CSS files are checked separately with npm packages. -->
+    <arg name="extensions" value="php" />
     <!-- Check all files in this directory and the directories below it. -->
     <file>.</file>
-
     <!-- Exclude patterns. -->
-    <exclude-pattern>*/vendor/*</exclude-pattern>
     <exclude-pattern>*/.wordpress-org/*</exclude-pattern>
+    <exclude-pattern>*/docs/*</exclude-pattern>
+    <exclude-pattern>*/vendor/*</exclude-pattern>
     <exclude-pattern>*/node_modules/*</exclude-pattern>
     <exclude-pattern>*/languages/*</exclude-pattern>
-    <exclude-pattern>*/dist/*</exclude-pattern>
-    <exclude-pattern>*/src/*</exclude-pattern>
+    <exclude-pattern>*/assets/*</exclude-pattern>
     <exclude-pattern>/index\.php</exclude-pattern>
+    <!-- Exclude minified Javascript files. -->
+    <exclude-pattern>*.min.js</exclude-pattern>
+    <!-- Exclude minified CSS files. -->
+    <exclude-pattern>*.min.css</exclude-pattern>
 
     <!--
     #############################################################################
     USE THE WordPress AND THE Theme Review RULESET
     #############################################################################
     -->
-
+    <!-- Check for WordPress standards. -->
     <!-- Include the WordPress ruleset, with select exclusions. -->
     <rule ref="WordPress">
         <exclude name="WordPress.NamingConventions.PrefixAllGlobals.ShortPrefixPassed" />
-        <exclude name="WordPress.Files.FileName.InvalidClassFileName" />
         <exclude name="PSR2.Methods.MethodDeclaration.Underscore" />
+        <exclude name="PSR2.Classes.PropertyDeclaration.Underscore" />
+        <exclude name="WordPress.Files.FileName.InvalidClassFileName" />
         <exclude name="Core.Commenting.CommentTags.AccessTag" />
         <exclude name="Core.Commenting.CommentTags.AuthorTag" />
     </rule>
-
-    <!-- Include the WooCommerce ruleset. -->
-    <rule ref="WooCommerce-Core" />
-
+    <!-- Check for WooCommerce standards. -->
+    <rule ref="WooCommerce-Core">
+		<exclude name="WooCommerce.Commenting.CommentTags.AuthorTag" />
+		<exclude name="WooCommerce.Commenting.CommentTags.CopyrightTag" />
+		<exclude name="WooCommerce.Commenting.CommentHooks.MissingHookComment" />
+	</rule>
     <!-- Let's also check that everything is properly documented. -->
-    <rule ref="WordPress-Docs"/>
-
+    <rule ref="WordPress-Docs" />
     <!--
     #############################################################################
     SNIFF SPECIFIC CONFIGURATION
     #############################################################################
     -->
-
     <!-- Verify that the text_domain is set to the desired text-domain.
          Multiple valid text domains can be provided as a comma-delimited list. -->
     <rule ref="WordPress.WP.I18n">
         <properties>
-            <property name="text_domain" type="array" value="woo-store-vacation"/>
+            <property name="text_domain" type="array" value="woo-store-vacation" />
         </properties>
     </rule>
-
     <!-- Set the minimum supported WP version. This is used by several sniffs.
          The minimum version set here should be in line with the minimum WP version
          as set in the "Requires at least" tag in the readme.txt file. -->
     <config name="minimum_supported_wp_version" value="5.0" />
-
     <rule ref="WordPress.Arrays.MultipleStatementAlignment">
         <properties>
             <!-- No need to adjust alignment of large arrays when the item with the largest key is removed. -->
-            <property name="exact" value="false"/>
+            <property name="exact" value="false" />
             <!-- Don't align multi-line items if ALL items in the array are multi-line. -->
-            <property name="alignMultilineItems" value="!=100"/>
+            <property name="alignMultilineItems" value="!=100" />
             <!-- Array assignment operator should always be on the same line as the array key. -->
-            <property name="ignoreNewlines" value="false"/>
+            <property name="ignoreNewlines" value="false" />
         </properties>
     </rule>
-
+    <rule ref="WordPress.Security.EscapeOutput">
+        <properties>
+            <property name="customEscapingFunctions" type="array" value="wc_clean" />
+        </properties>
+    </rule>
     <!-- Verify that everything in the global namespace is prefixed with a theme specific prefix.
          Multiple valid prefixes can be provided as a comma-delimited list. -->
     <rule ref="WordPress.NamingConventions.PrefixAllGlobals">
@@ -103,15 +104,12 @@
             </property>
         </properties>
     </rule>
-
     <!--
     #############################################################################
     USE THE PHPCompatibility RULESET
     #############################################################################
     -->
-
     <config name="testVersion" value="7.2-" />
     <!-- Include sniffs for PHP cross-version compatibility. -->
     <rule ref="PHPCompatibilityWP" />
-
 </ruleset>
