--- a/composer.json
+++ b/composer.json
@@ -3,27 +3,20 @@
 		"exclude": [
 			"!/assets",
 			"!/languages",
+			"/docs",
+			"/@mypreview",
+			"/vendor",
+			"node_modules",
 			"CONTRIBUTING.md",
 			"CODE_OF_CONDUCT.md",
+			"babel.config.js",
 			"composer.json",
 			"composer.lock",
 			"package.json",
 			"package-lock.json",
 			"phpcs.xml.dist",
-			"phpstan.neon.dist",
 			"README.md",
-			"@mypreview",
-			"docs",
-			"node_modules",
-			"vendor",
-			".editorconfig",
-			".gitattributes",
-			".gitignore",
-			".github",
-			".wordpress-org",
-			".eslintrc.js",
-			".prettierrc.js",
-			".*"
+			"/.*"
 		]
 	},
 	"authors": [
@@ -53,25 +46,22 @@
 	"license": "GPL-3.0",
 	"name": "mypreview/woo-store-vacation",
 	"require": {
-		"php": ">=7.2"
+		"php": ">=7.4"
 	},
 	"require-dev": {
 		"dealerdirect/phpcodesniffer-composer-installer": "0.7.2",
 		"php-parallel-lint/php-parallel-lint": "1.3.2",
 		"phpcompatibility/phpcompatibility-wp": "2.1.3",
-		"phpunit/phpunit": "7.5.20",
+		"phpunit/phpunit": "9.5.24",
 		"squizlabs/php_codesniffer": "3.7.1",
-		"szepeviktor/phpstan-wordpress": "1.1.2",
 		"woocommerce/woocommerce-git-hooks": "*",
 		"woocommerce/woocommerce-sniffs": "*",
 		"wp-cli/i18n-command": "2.4.0",
 		"wp-coding-standards/wpcs": "2.3.0"
 	},
 	"scripts": {
-		"analyze": "@php ./vendor/bin/phpstan analyze",
-		"lint:php": "@php ./vendor/bin/parallel-lint --exclude .git --exclude vendor --exclude node_modules .",
-		"lint:wpcbf": "@php ./vendor/squizlabs/php_codesniffer/bin/phpcbf",
-		"lint:wpcs": "@php ./vendor/squizlabs/php_codesniffer/bin/phpcs",
+		"lint:wpcbf": "phpcbf --extensions=php -p --runtime-set testVersion 7.4-",
+		"lint:wpcs": "phpcs --extensions=php -s -p --runtime-set testVersion 7.4-",
 		"make-pot": "wp i18n make-pot . languages/woo-store-vacation.pot"
 	},
 	"type": "wordpress-plugin"
