--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@mypreview/woo-store-vacation",
-	"version": "1.6.0",
+	"version": "1.6.1",
 	"private": true,
 	"description": "Pause your store with scheduling your vacation dates.",
 	"homepage": "https://github.com/mypreview/woo-store-vacation#readme",
@@ -19,7 +19,7 @@
 		"lint:js": "eslint assets/js/*.js",
 		"lint:js:fix": "eslint assets/js/*.js --fix",
 		"lint:wpcs": "composer lint:wpcs",
-		"lint:wpcs-fix": "composer lint:wpcbf",
+		"lint:wpcs:fix": "composer lint:wpcbf",
 		"makepot": "composer make-pot",
 		"minify": "cross-env BABEL_ENV=default NODE_ENV=production npm run minify:js",
 		"minify:js": "rimraf assets/js/minified && npm run format && babel assets/js/*.js --out-dir assets/js/minified --no-comments --minified --presets=@babel/preset-env"
