feat: Exclude vendor directory due to autoloader

--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,8 @@
 	"archive": {
 		"exclude": [
 			"!/languages",
+			"!vendor/*",
 			"docs",
-			"vendor",
 			"node_modules",
 			"CONTRIBUTING.md",
 			"CODE_OF_CONDUCT.md",
@@ -23,6 +23,11 @@
 			"name": "MyPreview"
 		}
 	],
+	"autoload": {
+		"classmap": [
+			"includes"
+		]
+	},
 	"config": {
 		"allow-plugins": {
 			"dealerdirect/phpcodesniffer-composer-installer": true
