--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,9 @@
 		"exclude": [
 			"!/languages",
 			"!vendor/*",
+			"!src/Vendor/*",
 			"docs",
+			"classes",
 			"node_modules",
 			"CODE_OF_CONDUCT.md",
 			"composer.json",
@@ -33,6 +35,18 @@
 	},
 	"description": "Pause your store during vacations by scheduling specific dates and display a customizable notice to visitors.",
 	"extra": {
+		"mozart": {
+			"classmap_directory": "/classes/dependencies/",
+			"delete_vendor_directories": true,
+			"dep_directory": "/src/Vendor/",
+			"dep_namespace": "Woo_Store_Vacation\\Vendor\\",
+			"excluded_packages": [
+				"psr/container"
+			],
+			"packages": [
+				"pimple/pimple"
+			]
+		},
 		"scripts-description": {
 			"lint:wpcbf": "Fix coding standards warnings/errors automatically with PHP Code Beautifier",
 			"lint:wpcs": "Analyze code against the WordPress coding standards with PHP_CodeSniffer",
@@ -48,12 +62,12 @@
 	"license": "GPL-3.0",
 	"name": "mypreview/woo-store-vacation",
 	"require": {
-		"mahdiyazdani/wc-install-notice": "^1.0",
-		"mahdiyazdani/wp-footer-rate": "^1.0",
-		"php": ">=7.4",
-		"pimple/pimple": "^3.5"
+		"mahdiyazdani/wc-install-notice": "1.0.0",
+		"mahdiyazdani/wp-footer-rate": "1.0.1",
+		"php": ">=7.4"
 	},
 	"require-dev": {
+		"coenjacobs/mozart": "^0.7.1",
 		"dealerdirect/phpcodesniffer-composer-installer": "0.7.2",
 		"php-parallel-lint/php-parallel-lint": "1.3.2",
 		"phpcompatibility/phpcompatibility-wp": "2.1.3",
@@ -62,19 +76,28 @@
 		"woocommerce/woocommerce-git-hooks": "*",
 		"woocommerce/woocommerce-sniffs": "*",
 		"wp-cli/i18n-command": "2.4.0",
-		"wp-coding-standards/wpcs": "2.3.0"
+		"wp-coding-standards/wpcs": "2.3.0",
+		"pimple/pimple": "^3.5"
 	},
 	"scripts": {
 		"bundle": [
 			"composer lint:wpcbf",
 			"rm -rf woo-store-vacation.zip",
-			"composer install --no-dev",
+			"composer install --no-dev --no-scripts",
 			"composer archive --file=woo-store-vacation --format=zip",
 			"composer install -vvv"
 		],
 		"lint:wpcbf": "phpcbf --extensions=php -p --runtime-set testVersion 7.4-",
 		"lint:wpcs": "phpcs --extensions=php -s -p --runtime-set testVersion 7.4-",
-		"make-pot": "wp i18n make-pot . languages/woo-store-vacation.pot --domain=woo-store-vacation"
+		"make-pot": "wp i18n make-pot . languages/woo-store-vacation.pot --domain=woo-store-vacation",
+		"post-install-cmd": [
+			"vendor/bin/mozart compose",
+			"composer dump-autoload"
+		],
+		"post-update-cmd": [
+			"vendor/bin/mozart compose",
+			"composer dump-autoload"
+		]
 	},
 	"type": "wordpress-plugin"
 }
